Add gemini api :sparkels:

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGODB_URI=mongodb+srv://Organizilla_me:UKOIF8ZG2Gli58B5@test.8fyztjy.mongodb.n
 PORT=3000
 VITE_GOOGLE_CLIENT_ID=514250898164-muto40vrs2hrt5tmjeag46dci6o6l09b.apps.googleusercontent.com
 JWT_SECRET=your_jwt_secret
+GOOGLE_GEMINI_API_KEY=AIzaSyBCwczqgJQI5CGCTO8jmwP1gzeBSvG0hS8
