--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ PORT='3000'
 VITE_GOOGLE_CLIENT_ID='514250898164-muto40vrs2hrt5tmjeag46dci6o6l09b.apps.googleusercontent.com'
 VITE_GOOGLE_CLIENT_SECRET='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'
 JWT_SECRET='your_jwt_secret'
+GOOGLE_GEMINI_API_KEY='AIzaSyBCwczqgJQI5CGCTO8jmwP1gzeBSvG0hS8'
