--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "author": "Devesh Patel",
   "license": "MIT",
   "dependencies": {
+    "@google/genai": "^0.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -30,6 +31,5 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
-  },
-  "type": "module"
+  }
 }
